# FileBasket

./: CMakeLists.txt  LICENSE  README.md  main.cpp  window.cpp
Tests/: CMakeLists.txt  tst_appmodeltest.cpp
controller/: FileBasketController.cpp  FileBasketController.h
model/: AppModel.cpp  AppModel.h  FileListModel.cpp  FileListModel.h
services/: FileOperationService.cpp  FileOperationService.h  LicenseService.cpp  LicenseService.h  PersistenceService.cpp  PersistenceService.h  UpdateCheckerService.cpp  UpdateCheckerService.h
ui/: CustomTabBar.cpp  CustomTabBar.h  FileItemDelegate.cpp  FileItemDelegate.h  FileListView.cpp  FileListView.h  res.qrc  style.qss  window.cpp  window.h  window.ui
ui/resources/Themes/: Light.qss
